# qcloud-iot-trtc-demo

./: .gitignore  .gitmodules  CMakeLists.txt  cmake_build.sh  device_info.json  readme.md
include/: TencentSDKWarpper.h  qcloud_iot_device_bind.h  qcloud_iot_trtc.h  qcloud_iot_trtc_data_tempalte.h  qrcode_display.h  utils_sha256.h
iot-explorer-c-sdk/: CMakeLists.txt
sample/: trtc_demo.c
src/qrcode/: qrcode_display.c
src/trtc_iot/: trtc_iot.c
src/trtc_iot/data_template/: TencentSDKWarpper.cpp  trtc_data_template.c
src/trtc_iot/device_bind/: qcloud_iot_device_bind.c  utils_sha256.c
trtc_sdk/trtc_6.5.70/: 腾讯实时音视频（TRTC）-服务端SDK对接说明.txt
trtc_sdk/trtc_6.5.70/examples/pushtotrtc/: CMakeLists.txt  README.txt  main.cpp  run.sh
trtc_sdk/trtc_6.5.70/examples/pushtotrtc/usages/: TencentSDKWapperMixRecord.cpp  TencentSDKWapperMixRecord.h  TencentSDKWapperPushMp4.cpp  TencentSDKWapperPushMp4.h  TencentSDKWapperRecord.cpp  TencentSDKWapperRecord.h
trtc_sdk/trtc_6.5.70/examples/pushtotrtc_ipc/: CMakeLists.txt  README.txt  main.cpp
trtc_sdk/trtc_6.5.70/go/: recordsdk.go  recordsdk.i
trtc_sdk/trtc_6.5.70/include/: TRTCCloud.h  TRTCCloudDef.h  TXLiteAVCode.h
trtc_sdk/trtc_6.5.70/java/: convert.sh  recordsdk.i
trtc_sdk/trtc_6.5.70/java/trtc_demo/src/: TRTCDemo.java
trtc_sdk/trtc_6.5.70/java/trtc_demo/src/com/engine/: AudioRecvCallbackWarpper.java  EngineWarpper.java  VideoRecvCallbackWarpper.java
trtc_sdk/trtc_6.5.70/java/trtc_demo/src/com/tencent/: TXLiteAVError.java  trtcenginewarper.java  trtcenginewarperJNI.java
